fix intro spacing

--- a/src/css/components/intro.scss
+++ b/src/css/components/intro.scss
@@ -1,9 +1,9 @@
 .intro {
   width: 100%;
   max-width: 80%;
-  margin-top: 14vw;
+  margin-top: 12vw;
   position: relative;
-  left: -10px;
+  left: -0.5vw;
 
   > .title {
     line-height: 1.1em;
